syntax = "proto3";
package pirate;

message AppWriteRequest {
    uint64 group_id = 1;
    uint64 term = 2;
    bytes data = 3;
    bytes context = 4;
}

message AppWriteResponse {

}

message ReadIndexContext {
    bytes uuid = 1;
    bytes data = 2;
}

message AppReadIndexRequest {
    uint64 group_id = 1;
    ReadIndexContext context = 2;
}

message AppReadIndexResponse {

}
